Fix some links displayed in primary color because of the btn-invisible rule

--- a/_dev/apps/ui/src/assets/scss/base/_common.scss
+++ b/_dev/apps/ui/src/assets/scss/base/_common.scss
@@ -1,5 +1,12 @@
 a {
   color: $blue;
+
+  &:not(.btn) {
+    &:hover,
+    &:focus {
+      color: $blue-700 !important;
+    }
+  }
 }
 
 a[target="_blank"]:not(.external_link-no_icon) {
@@ -7,10 +14,6 @@ a[target="_blank"]:not(.external_link-no_icon) {
   &:not(.btn) {
     text-decoration: underline;
 
-    &:hover,
-    &:focus {
-      color: rgba($blue, 0.65) !important;
-    }
     &::after {
       content: "\e895"; // "launch" icon
       font-family: 'Material Icons';
@@ -25,12 +28,12 @@ a[target="_blank"]:not(.external_link-no_icon) {
 
 .text-muted a[target="_blank"]:not(.external_link-no_icon),
 a[target="_blank"].text-muted:not(.external_link-no_icon) {
-  color: $blue !important;
+  color: $grey_muted !important;
 }
 
 .text-muted a.with-hover,
 a.text-muted.with-hover {
-  color: $blue !important;
+  color: $grey_muted !important;
 
   &:hover, &:focus {
     color: $blue !important;
