--- a/_dev/apps/ui/src/assets/scss/components/_button.scss
+++ b/_dev/apps/ui/src/assets/scss/components/_button.scss
@@ -30,10 +30,6 @@
 }
 
 .btn-invisible {
-  &:not(.disabled) {
-    color: $blue;
-  }
-
   &:hover:not(.disabled), &:focus:not(.disabled) {
     color: rgba($blue, 0.65) !important;
   }
